Fix vertical alignment of two line fields

--- a/Team Project/Content/form.css
+++ b/Team Project/Content/form.css
@@ -8,6 +8,11 @@
 /*	width: 30%;*/
 /*	height: 271px;*/
 }
+label.twoline 
+{
+    position: relative;
+    top: -7px;
+}
 .section .checked {
 	float: right;
 	content:"\2714";
